Configure spring-boot:run to allow VisualVM connection